	Fixed bug with BBCode source editor creating links with [img] tags selected.
		- Thanks to @liamdawe for reporting.
	Fixed issue with insert() and FF.
		- Thanks to @martec for reporting.
	Fixed in IE8 and below with XHTML font size attribute converstion.
	Fixed typo in German translation.
		- Thanks to Ulf for reporting.
	Removed build.sh as grunt now does everything build.sh could.

Version 1.4.4:
	Fixed height auto expanding when resized.
		- Thanks to @TimWardC3 for reporting
	Fixed emoticons with greater than (>) not being converted.
		- Thanks to @imansa for reporting.
	Improved emoticonsCompat support so emoticons are converted to text if whitespace is removed.
		- Thanks to @ostinelli for reporting
	Fixed bug causing spaces to not be inserted when an emoticon is inserted in emoticonsCompat mode.
		- Thanks to @ostinelli for reporting
	Fixed bug with toolbar not being removed by destroy() when in a custom toolbarContainer.
		- Thanks to @imansa for reporting.
	Added currentBlockNode() method.
	Improved multiline lists in source mode.
		- Thanks to @liamdawe for reporting.
	Improve theme compatibility.
	Fixed issue with iOS not breaking long words.
		- Thanks to Francesco for reporting.
	Fixed bug with IE not releasing focus when autoUpdate is enabled.
		- Thanks to @LeeMcNeil for reporting.
	Improved IE range handling.
	Fixed IE height bug where blur() method increased the editors height.
	Fixed IE6/7 bug where there was a 2px height difference between WYSIWYG and source modes.
	Fixed new line auto appending after code/quote blocks not working.
		- Thanks to @Dr1ks for reporting.
	Fixed issue with Opera adding blank lines.
		- Thanks to @Dr1ks for reporting.
	Improved unlink to remove links without selecing the whole link.
		- Thanks to @liamdawe for reporting.
	Fixed newline after [quote] being stripped.
		- Thanks to @liamdawe for reporting.
	Fixed IE bug loading initially loading shorthand colors.
		- Thanks to @Olive140 for reporting.