@@ -1,0 +1,68 @@
+/**
+ * @author <Tropico> <www.mangiaconsapevole.com>
+ * @license [MIT](http://www.opensource.org/licenses/mit-license.php)
+ */
+(function ($) {
+	'use strict';
+
+	$.sceditor.locale["it-IT"] = {
+		"Bold": "Grassetto",
+		"Italic": "Corsivo",
+		"Underline": "Sottolineato",
+		"Strikethrough": "Barrato",
+		"Subscript": "Pedice",
+		"Superscript": "Apice",
+		"Align left": "Allinea a sinistra",
+		"Center": "Centrato",
+		"Align right": "Allinea a destra",
+		"Justify": "Giustificato",
+		"Font Name": "Nome carattere",
+		"Font Size": "Dimensione carattere",
+		"Font Color": "Colore carattere",
+		"Remove Formatting": "Rimuovi formattazione",
+		"Cut": "Taglia",
+		"Your browser does not allow the cut command. Please use the keyboard shortcut Ctrl/Cmd-X": "Il tuo browser non permette il comando Taglia. Usa per favore la scorciatoia da tastiera Ctrl/Cmd-X",
+		"Copy": "Copia",
+		"Your browser does not allow the copy command. Please use the keyboard shortcut Ctrl/Cmd-C": "Il tuo browser non permette il comando Copia. Usa per favore la scorciatoia da tastiera Ctrl/Cmd-C",
+		"Paste": "Incolla",
+		"Your browser does not allow the paste command. Please use the keyboard shortcut Ctrl/Cmd-V": "Il tuo browser non permette il comando Incolla. Usa per favore la scorciatoia da tastiera Ctrl/Cmd-V",
+		"Paste your text inside the following box:": "Incolla il tuo testo dentro il seguente riquadro",
+		"Paste Text": "Incolla Testo",
+		"Bullet list": "Elenco puntato",
+		"Numbered list": "Elenco numerato",
+		"Undo": "Annulla",
+		"Redo": "Ripeti",
+		"Rows:": "Righe:",
+		"Cols:": "Colonne:",
+		"Insert a table": "Inserisci una tabella",
+		"Insert a horizontal rule": "Inserisci riga orizzontale",
+		"Code": "Codice",
+		"Width (optional):": "Larghezza(opzionale):",
+		"Height (optional):": "Altezza(opzionale):",
+		"Insert an image": "Inserisci un'immagine",
+		"E-mail:": "E-mail:",
+		"Insert an email": "Inserisci una email",
+		"URL:": "URL:",
+		"Insert a link": "Inserisci collegamento(link):",
+		"Unlink": "Togli collegamento(link):",
+		"More": "Di più",
+		"Insert an emoticon": "Inserisci una emoticon",
+		"Video URL:": "URL del video",
+		"Insert": "Inserisci",
+		"Insert a YouTube video": "Inserisci un video YouTube",
+		"Insert current date": "Inserisci data corrente",
+		"Insert current time": "Inserisci ora corrente",
+		"Print": "Stampa",
+		"View source": "Vedi codice sorgente",
+		"Description (optional):": "Descrizione (opzionale):",
+		"Enter the image URL:": "Inserisci URL dell'immagine",
+		"Enter the e-mail address:": "Inserisci indirizzo email",
+		"Enter the displayed text:": "Inserisci testo visualizzato",
+		"Enter URL:": "Inserisci URL",
+		"Enter the YouTube video URL or ID:": "Inserisci URL o ID video di YouTube",
+		"Insert a Quote":"Inserisci una citazione",
+		"Invalid YouTube video": "Video YouTube invalido",
+
+		dateFormat: "day-month-year"
+	};
+})(jQuery);
