@@ -15,6 +15,8 @@ Version 1.4.5:
 	Fixed typo in German translation.
 		- Thanks to Ulf for reporting.
 	Removed build.sh as grunt now does everything build.sh could.
+	Added Italian translation.
+		- Thanks to Tropico for translating.
 
 Version 1.4.4:
 	Fixed height auto expanding when resized.
